# haskell-hud-menu

./: .gitignore  README.md  haskell-hud-menu.cabal  hie.yaml  stack  stack.yaml
app/: Main.hs
appmenu-registrar-service/: Main.hs
hudmenu/: Main.hs
src/: AppmenuRegistrar.hs  HudMenu.hs  Main.hs  Service.hs
src/HudMenu/: Dbusmenu.hs  Types.hs  Xlib.hs
