name:                haskell-hud-menu
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/hs-hud#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2020 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable haskell-hud-menu
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, 
                       X11,
                       dbus,
                       containers,
                       ordered-containers,
                       text,
                       process,
                       haskell-gi-base,
                       gi-gtk,
                       gi-glib,
                       mtl,
                       transformers,
                       monad-loops,
                       unix
