name:                haskell-hud-menu
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/sixrapid/haskell-hud-menu#readme
license:             GPL-3
license-file:        LICENSE
author:              Kasperi Kuuskoski
maintainer:          example@example.com
copyright:           2020 Kasperi Kuuskoski
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  default-language:    Haskell2010
  hs-source-dirs:      src
  default-extensions:  OverloadedStrings, ScopedTypeVariables
  build-depends:       base >= 4.7 && < 5, 
                       X11,
                       dbus,
                       containers,
                       ordered-containers,
                       text,
                       process,
                       mtl,
                       transformers,
                       monad-loops,
                       unix
  exposed-modules:     HudMenu.Types,
                       HudMenu.Xlib,
                       HudMenu.Dbusmenu

executable haskell-hud-menu
  hs-source-dirs:      app
  main-is:             Main.hs
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings, ScopedTypeVariables
  build-depends:       base >= 4.7 && < 5, 
                       dbus,
                       ordered-containers,
                       text,
                       process,
                       mtl,
                       transformers,
                       monad-loops,
                       haskell-hud-menu
  

