cabal-version:       2.2
name:                haskell-hud-menu
synopsis:            Run menubar commands using a searchable list
version:             0.1.0.0
homepage:            https://github.com/sixrapid/haskell-hud-menu#readme
license:             GPL-3.0-only
license-file:        LICENSE
author:              Kasperi Kuuskoski
build-type:          Simple
extra-source-files:  README.md

common shared-properties
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings, ScopedTypeVariables
  ghc-options:         -O2
  build-depends:       base >= 4.7 && < 5, 
                       X11,
                       dbus,
                       containers,
                       ordered-containers,
                       text,
                       process,
                       mtl,
                       transformers,
                       monad-loops,
                       unix


library
  import:              shared-properties
  hs-source-dirs:      src
  exposed-modules:     HudMenu.Types,
                       HudMenu.Xlib,
                       HudMenu.Dbusmenu

executable appmenu-registrar-service
  import:              shared-properties
  build-depends:       haskell-hud-menu
  hs-source-dirs:      appmenu-registrar-service
  main-is:             Main.hs

executable hudmenu
  import:              shared-properties
  build-depends:       haskell-hud-menu
  hs-source-dirs:      hudmenu
  main-is:             Main.hs


